--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "npm run lint && gulp generate-assets && jest"
   },
   "dependencies": {
+    "@hmcts/frontend": "0.0.32-alpha",
     "acorn": "^6.0.5",
     "ansi-colors": "^3.2.3",
     "basic-auth": "^2.0.0",
@@ -28,13 +29,14 @@
     "express-writer": "0.0.4",
     "fancy-log": "^1.3.3",
     "govuk-elements-sass": "^3.1.3",
-    "govuk-frontend": "^2.9.0",
+    "govuk-frontend": "^2.10.0",
     "govuk_frontend_toolkit": "^7.5.0",
     "govuk_template_jinja": "^0.24.1",
     "gulp": "^4.0.0",
     "gulp-nodemon": "^2.1.0",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.0",
+    "hmrc-frontend": "^0.2.0",
     "keypather": "^3.0.0",
     "marked": "^0.4.0",
     "notifications-node-client": "^4.1.0",
