--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "jest": "^24.0.1",
+    "nunjucks-date-filter": "^0.1.1",
     "standard": "^12.0.1",
     "supertest": "^3.0.0"
   }
