--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
     "require-dir": "^1.0.0",
     "sync-request": "^6.0.0",
     "universal-analytics": "^0.4.16",
-    "uuid": "^3.2.1",
-    "nunjucks-date-filter": "^0.1.1"
+    "uuid": "^3.2.1"
   },
   "greenkeeper": {
     "ignore": [
